--- a/src/pages/BranchesPage/BranchesPage.css
+++ b/src/pages/BranchesPage/BranchesPage.css
@@ -144,7 +144,7 @@
 }
 
 .branches-page__contact {
-    padding: 80px 20px 0;
+    padding: 80px 0 0;
 }
 
 @media (max-width: 992px) {
@@ -304,6 +304,6 @@
     }
 
     .branches-page__contact {
-        padding: 70px 16px 0;
+        padding: 70px 0 0;
     }
 }
