--- a/src/sections/DeclarationSection.css
+++ b/src/sections/DeclarationSection.css
@@ -10,7 +10,7 @@
 
 .decl-title {
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 8px;
 }
 
 .decl-title h2 {
