--- a/src/sections/Header.css
+++ b/src/sections/Header.css
@@ -104,9 +104,9 @@
 }
 
 .ncsu-icon {
-    height: 140px;
+    height: 100px;
     width: auto;
-    max-width: 100px;
+    max-width: 75px;
     object-fit: contain;
     padding-right: 60px;
     box-sizing: content-box;
@@ -114,8 +114,8 @@
 
 @media (max-width: 430px) {
     .ncsu-icon {
-        height: 90px;
-        max-width: 78px;
+        height: 72px;
+        max-width: 56px;
         padding-right: 70px;
     }
 }
